# cookiecutter-poetry-config-management

./: README.md
standard/: cookiecutter.json
standard/hooks/: post_gen_project.py  pre_gen_project.py
standard/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  .python-version  config.py  pyproject.toml  setup.cfg  {{cookiecutter.env}}  {{cookiecutter.gitignore}}
standard/{{cookiecutter.project_name}}/config/: config.json
standard/{{cookiecutter.project_name}}/tests/: test_read_config.py  test_{{cookiecutter.project_name}}.py
standard/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: config.py
standard/{{cookiecutter.project_name}}/{{cookiecutter.vscode}}/: settings.json
